MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Receipt_Cleared_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Cleared_Salesforce__c</fullName>
    <formula>AND(
ISPICKVAL(Status__c, &quot;Cleared&quot;),
NOT(ISBLANK(Oracle_Id_Temporary__c)),
NOT(ISBLANK(OraclePartyId__c)),
Receipt_Approved_Checker__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Cleared (Salesforce)</label>
    <type>Checkbox</type>
</CustomField>