MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Receipt_Excess_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Excess_Amount__c</fullName>
    <formula>IF( Receipt_Amount__c &gt; AppliedAmount__c , (Receipt_Amount__c - AppliedAmount__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Excess Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>