MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Receipt_Type__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Type__c</fullName>
    <label>Receipt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installment Receipt</fullName>
            </value>
            <value>
                <fullName>Maintenance Receipt</fullName>
            </value>
            <value>
                <fullName>EOI Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>