MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/ReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>ReceiptDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>