MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/ReceiptPurposeArabic__c.field-meta.xml
<CustomField>
    <fullName>ReceiptPurposeArabic__c</fullName>
    <description>This field is used to store the purpose of the receipt in Arabic.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt Purpose Arabic</label>
    <type>TextArea</type>
</CustomField>