MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/ReceiptPurposeEnglish__c.field-meta.xml
<CustomField>
    <fullName>ReceiptPurposeEnglish__c</fullName>
    <description>This field is used to store the purpose of the receipt in English.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt Purpose English</label>
    <type>TextArea</type>
</CustomField>