MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/ReceiptRemarks__c.field-meta.xml
<CustomField>
    <fullName>ReceiptRemarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>