MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/ReceiptStatusUpdatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReceiptStatusUpdatedDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt Status Updated DateTime</label>
    <type>DateTime</type>
</CustomField>