MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Reject_Down_ADM_Payement_Status__c.field-meta.xml
<CustomField>
    <fullName>Reject_Down_ADM_Payement_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reject Down/ADM Payement Status</label>
    <type>Checkbox</type>
</CustomField>