MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/RemainingAmount__c.field-meta.xml
<CustomField>
    <fullName>RemainingAmount__c</fullName>
    <formula>IF(Source_Entity__c = &apos;&apos;, TotalAmount__c - AppliedAmount__c, IF( AND(Applied_Amount_In_Receipt_Currency_New__c &gt; 0, Source_Entity__c = &apos;Modon - Egypt&apos;) , TotalAmount__c - Applied_Amount_In_Receipt_Currency_New__c - Total_Refunded_Amount__c  ,IF( Source_Entity__c = &apos;Modon - Egypt&apos;, TotalAmount__c - AppliedAmount__c - Total_Refunded_Amount__c   , TotalAmount__c - AppliedAmount__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>