MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/ReSendPaymentURLRequest__c.field-meta.xml
<CustomField>
    <fullName>ReSendPaymentURLRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Send Payment URL Request</label>
    <type>Checkbox</type>
</CustomField>