MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/ReverseReasonstatus__c.field-meta.xml
<CustomField>
    <fullName>ReverseReasonstatus__c</fullName>
    <label>ReverseReasonstatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Error</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>