MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/SalesOrderAccountIDFormula__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderAccountIDFormula__c</fullName>
    <formula>SalesOrder__r.CustomerAccount__c</formula>
    <label>Sales Order Account ID- Formula</label>
    <type>Text</type>
</CustomField>