MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/SalesOrderInstallment__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderInstallment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Installment</label>
    <referenceTo>SalesOrderInstallments__c</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>