MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/SalesOrderOpportunityIDFormula__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderOpportunityIDFormula__c</fullName>
    <formula>SalesOrder__r.Opportunity__c</formula>
    <label>Sales Order Opportunity ID- Formula</label>
    <type>Text</type>
</CustomField>