MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/SalesOrderOwnerIDFormula__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderOwnerIDFormula__c</fullName>
    <formula>SalesOrder__r.OwnerId</formula>
    <label>Sales Order Owner ID- Formula</label>
    <type>Text</type>
</CustomField>