MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Source_Entity__c.field-meta.xml
<CustomField>
    <fullName>Source_Entity__c</fullName>
    <description>Modon Egypt Source Entity</description>
    <formula>IF(
    NOT(ISBLANK(SalesOrder__c)),
        TEXT(SalesOrder__r.Source_Entity__c),
    IF(
        NOT(ISBLANK(ExpressionOfInterest__c)),
            ExpressionOfInterest__r.Source_Entity__c,
        NULL
    ))</formula>
    <label>Source Entity</label>
    <type>Text</type>
</CustomField>