MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Total_Refunded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Refunded_Amount__c</fullName>
    <description>Total Refunded Amount is the total amount refernded against this receipt.</description>
    <label>Total Refunded Amount</label>
    <summarizedField>Refund__c.Refund_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Refund__c.Refund_Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected By Finance, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Refund__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>