MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Totalamountinwords__c.field-meta.xml
<CustomField>
    <fullName>Totalamountinwords__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total amount in words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>