MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INSTALLMENT</fullName>
            </value>
            <value>
                <fullName>ADM_CHARGES</fullName>
            </value>
            <value>
                <fullName>MODON_FEE</fullName>
            </value>
            <value>
                <fullName>SERVICE_CHARGES</fullName>
            </value>
            <value>
                <fullName>LEGAL_CHARGES</fullName>
            </value>
            <value>
                <fullName>LATE_PAYMENT_FEE</fullName>
            </value>
            <value>
                <fullName>EQU_TRANSFOR</fullName>
            </value>
            <value>
                <fullName>REFOUND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>