MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>