MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/TransactionDateTimePGWinText__c.field-meta.xml
<CustomField>
    <fullName>TransactionDateTimePGWinText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TransactionDateTime PGW in Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>