MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/TransactionNumber__c.field-meta.xml
<CustomField>
    <fullName>TransactionNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>