MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/UnitNumber__c.field-meta.xml
<CustomField>
    <fullName>UnitNumber__c</fullName>
    <formula>/*SalesOrderInstallment__r.SalesOrder__r.Unit__r.Name*/
IF( NOT(ISBLANK(SalesOrderInstallment__c)), SalesOrderInstallment__r.SalesOrder__r.Unit__r.Name, SalesOrder__r.Unit__r.Name)</formula>
    <label>Unit Number</label>
    <type>Text</type>
</CustomField>