MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Verified_Not_Sent_to_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Verified_Not_Sent_to_Oracle__c</fullName>
    <formula>AND(
ISPICKVAL(Status__c, &quot;In Progress&quot;),
ISBLANK(Oracle_Id_Temporary__c),
Receipt_Approved_Checker__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verified – Not Sent to Oracle</label>
    <type>Checkbox</type>
</CustomField>