MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/VirtualAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>VirtualAccountNumber__c</fullName>
    <formula>SalesOrderInstallment__r.SalesOrder__r.VirtualAccount__r.Name</formula>
    <label>Virtual Account Number</label>
    <type>Text</type>
</CustomField>