MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/recordTypes/Equity_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Equity_Transfer</fullName>
    <active>true</active>
    <label>Equity Transfer</label>
</RecordType>