MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/EBS_Clearing_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>EBS_Clearing_Date_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISCHANGED( Status__c ),  ISBLANK( EBS_Clearing_Date__c ),  ISPICKVAL(Status__c, &apos;Cleared&apos;),NOT(ISPICKVAL( Account__r.Source_Entity__c , &apos;Modon - Egypt&apos;)),NOT(ISPICKVAL(  Modeofpayment__c , &apos;Equity Transfer&apos;)))</errorConditionFormula>
    <errorMessage>Please update EBS Clearing date</errorMessage>
</ValidationRule>