MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/EBS_is_required_if_Cleared.validationRule-meta.xml
<ValidationRule>
    <fullName>EBS_is_required_if_Cleared</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &apos;Cleared&apos;),
    !ISPICKVAL(Modeofpayment__c, &apos;Equity Transfer&apos;),
    ISBLANK(EBS_Clearing_Date__c),
    OR(
        AND(
            NOT(ISBLANK(SalesOrder__c)),
            NOT(ISPICKVAL(SalesOrder__r.Source_Entity__c, &apos;Modon - Egypt&apos;))
        ),
        AND(
            ISBLANK(SalesOrder__c),
            NOT(ISPICKVAL(Account__r.Source_Entity__c, &apos;Modon - Egypt&apos;))
        )
    )
)</errorConditionFormula>
    <errorDisplayField>EBS_Clearing_Date__c</errorDisplayField>
    <errorMessage>Please provide EBS Clearing Date if Payment is Cleared</errorMessage>
</ValidationRule>