MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/Egypt_Ensure_Bank_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Egypt_Ensure_Bank_Name</fullName>
    <active>true</active>
    <description>This will prevent creating or editing Payment records without Bank picklist value filled.</description>
    <errorConditionFormula>AND(
 Source_Entity__c = &apos;Modon - Egypt&apos;,
 ISPICKVAL( Modeofpayment__c , &apos;Cheque&apos;), 
 ISBLANK( TEXT( Bank__c )) 
)</errorConditionFormula>
    <errorDisplayField>Bank__c</errorDisplayField>
    <errorMessage>Please select Customer Bank for Cheque mode of payment.</errorMessage>
</ValidationRule>