MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/Egypt_Ensure_BankTransfer_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Egypt_Ensure_BankTransfer_Details</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ( Source_Entity__c = &apos;Modon - Egypt&apos;),
 ISPICKVAL( Modeofpayment__c , &apos;Bank Transfer&apos;),
 OR(ISBLANK(TransactionNumber__c), ISBLANK(TransactionDate__c), ISBLANK(IBAN_Swift_Code_last_4_digit__c))
)</errorConditionFormula>
    <errorMessage>For Bank Transfer Mode of Payment the Transaction Number and Transaction Date and IBAN/Swift Code last 4 digit are required.</errorMessage>
</ValidationRule>