MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/Egypt_Ensure_Cheque_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Egypt_Ensure_Cheque_Details</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ( Source_Entity__c = &apos;Modon - Egypt&apos;),
 ISPICKVAL( Modeofpayment__c , &apos;Cheque&apos;),
 OR(ISBLANK( Cheque_Number__c ), ISBLANK( ChequeDate__c ))
)</errorConditionFormula>
    <errorMessage>For Cheque Payment mode the Cheque Number and Cheque Date are required.</errorMessage>
</ValidationRule>