MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/Egypt_Ensure_MIRE_Bank_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Egypt_Ensure_MIRE_Bank_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Source_Entity__c = &apos;Modon - Egypt&apos;,
ISBLANK( TEXT(  MIRE_Bank__c ))
)</errorConditionFormula>
    <errorMessage>Please select MIRE Bank.</errorMessage>
</ValidationRule>