MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/Egypt_Ensure_Online_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Egypt_Ensure_Online_Details</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ( Source_Entity__c = &apos;Modon - Egypt&apos;),
 ISPICKVAL( Modeofpayment__c , &apos;Online&apos;),
 ISBLANK(TransactionDate__c)
)</errorConditionFormula>
    <errorMessage>For Online Mode of Payment the Transaction Date is required.</errorMessage>
</ValidationRule>