MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/Egypt_Ensure_POS_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Egypt_Ensure_POS_Details</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ( Source_Entity__c = &apos;Modon - Egypt&apos;),
 ISPICKVAL( Modeofpayment__c , &apos;POS&apos;),
 OR(ISBLANK(TransactionNumber__c), ISBLANK(TransactionDate__c),  ISBLANK(Last4DigitString__c))
)</errorConditionFormula>
    <errorMessage>For POS Mode of Payment the Transaction Number, Transaction Date and Last 4 digits are required.</errorMessage>
</ValidationRule>