MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/Egypt_Prevent_Negative_Total_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Egypt_Prevent_Negative_Total_Amount</fullName>
    <active>true</active>
    <description>This validation rule will prevent negative amount total Amount field in Modon - Egypt Payments.</description>
    <errorConditionFormula>AND(
 Source_Entity__c = &apos;Modon - Egypt&apos;,
 TotalAmount__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>TotalAmount__c</errorDisplayField>
    <errorMessage>Payment Total Amount must be a positive value.</errorMessage>
</ValidationRule>