MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/Egypt_Reversed_Status_IntegrationProfile.validationRule-meta.xml
<ValidationRule>
    <fullName>Egypt_Reversed_Status_IntegrationProfile</fullName>
    <active>true</active>
    <description>Only users with the Modon Egypt - Salesforce Integration profile can set Status to Reversed for Modon - Egypt records.</description>
    <errorConditionFormula>AND(
  Source_Entity__c = &quot;Modon - Egypt&quot;,
  ISCHANGED(Status__c),
  ISPICKVAL(Status__c, &quot;Reversed&quot;),
  $Profile.Name &lt;&gt; &quot;Modon Egypt - Salesforce Integration Profile&quot;
)</errorConditionFormula>
    <errorMessage>You don&apos;t have permission to set Status to Reversed for this record.</errorMessage>
</ValidationRule>