MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/Prevent_Account_SO_Update_On_EOI_Refund.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Account_SO_Update_On_EOI_Refund</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Case__c)),
    NOT(ISBLANK( ExpressionOfInterest__c ) ),
    OR(
        ISCHANGED(Account__c),
        ISCHANGED(SalesOrder__c)
    )
)</errorConditionFormula>
    <errorMessage>Account and Sales Order cannot be updated when the Receipt is linked to an EOI Refund Case.</errorMessage>
</ValidationRule>