MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/Refunded_Receipt_Cannot_Be_Edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Refunded_Receipt_Cannot_Be_Edited</fullName>
    <active>true</active>
    <description>Once Refunded__c is TRUE, the Receipt is locked</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    PRIORVALUE(Refunded__c) = TRUE,
    NOT(
        OR(
            $Profile.Name = &quot;System Administrator&quot;,
            $Profile.Name = &quot;Support Team&quot;
        )
    ),
    OR(
        ISCHANGED(Account__c),
        ISCHANGED(Case__c),
        ISCHANGED(Cheque_Bounce_Reason__c),
        ISCHANGED(Cheque_Verification_Status__c),
        ISCHANGED(ChequeDate__c),
        ISCHANGED(Comments_Description__c),
        ISCHANGED(EBS_Clearing_Date__c),
        ISCHANGED(ExpressionOfInterest__c),
        ISCHANGED(Is_ADM_Fees_and_Dari_charges__c),
        ISCHANGED(Modeofpayment__c),
        ISCHANGED(OICIntegrationMessage__c),
        ISCHANGED(OICIntegrationStatus__c),
        ISCHANGED(OICNoOfRetries__c),
        ISCHANGED(Oracle_Id_Temporary__c),
        ISCHANGED(OraclePartyId__c),
        ISCHANGED(PaymentEscrowAccount__c),
        ISCHANGED(PaymentGatewayURL__c),
        ISCHANGED(PaymentStatus__c),
        ISCHANGED(Receipt_Amount__c),
        ISCHANGED(Receipt_Approved_By__c),
        ISCHANGED(Receipt_Approved_Checker__c),
        ISCHANGED(Receipt_Approved_Date__c),
        ISCHANGED(ReceiptDate__c),
        ISCHANGED(ReceiptRemarks__c),
        ISCHANGED(ReSendPaymentURLRequest__c),
        ISCHANGED(ReverseReasonstatus__c),
        ISCHANGED(SalesOrder__c),
        ISCHANGED(SalesOrderInstallment__c),
        ISCHANGED(Status__c),
        ISCHANGED(Transaction_Type__c),
        ISCHANGED(TransactionDate__c),
        ISCHANGED(TransactionNumber__c)
    )
)</errorConditionFormula>
    <errorMessage>This Receipt has already been refunded.</errorMessage>
</ValidationRule>