MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/Refunded_Receipt_Cannot_Unchecked.validationRule-meta.xml
<ValidationRule>
    <fullName>Refunded_Receipt_Cannot_Unchecked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
PRIORVALUE(Refunded__c) = TRUE,
Refunded__c = FALSE,
OR( CONTAINS($User.Username, &apos;divona.thomas@modon.com&apos;),
			CONTAINS($User.Username, &apos;edison.paul@modon.com&apos;),
			CONTAINS($User.Username, &apos;jaina.taylaran@modon.com&apos;),
			CONTAINS($User.Username, &apos;nermeen.elshafie@modon.com&apos;),
			CONTAINS($User.Username, &apos;tetiana.barbar@modon.com&apos;)
		)
)</errorConditionFormula>
    <errorMessage>You cannot uncheck Refunded</errorMessage>
</ValidationRule>