MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/Require_Cheque_Bounce_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Cheque_Bounce_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
TEXT(Account__r.Source_Entity__c) &lt;&gt; &apos;Modon - Egypt&apos;,
ISPICKVAL(Modeofpayment__c, &apos;Cheque&apos;),
ISPICKVAL(Status__c, &apos;Bounced&apos;),
ISBLANK(TEXT(Cheque_Bounce_Reason__c))
)</errorConditionFormula>
    <errorMessage>Please select a Cheque Bounce Reason when the status is Bounced, payment mode is Cheque.</errorMessage>
</ValidationRule>