MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/validationRules/User_cannot_change_the_receipt_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>User_cannot_change_the_receipt_amount</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED( TotalAmount__c )</errorConditionFormula>
    <errorDisplayField>TotalAmount__c</errorDisplayField>
    <errorMessage>Receipt amount cannot be changed.</errorMessage>
</ValidationRule>