MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PaymentGatewayURL__c</columns>
    <columns>PaymentStatus__c</columns>
    <columns>Status__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>Account__c</columns>
    <columns>GeneratePaymentGatewayURLCallCount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>