MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/listViews/All_Legacy_Egypt_Payment.listView-meta.xml
<ListView>
    <fullName>All_Legacy_Egypt_Payment</fullName>
    <columns>NAME</columns>
    <columns>Receipt_Serial_No_Legacy__c</columns>
    <columns>Bank__c</columns>
    <columns>Account__c</columns>
    <columns>ExpressionOfInterest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Receipt_Serial_No_Legacy__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Legacy Egypt Payment</label>
    <sharedTo>
        <group>Modon_Egypt_Users_Group</group>
    </sharedTo>
</ListView>